[gd_scene load_steps=20 format=2]

[ext_resource path="res://screens/info_screen/spacekey.png" type="Texture" id=1]
[ext_resource path="res://screens/info_screen/escKey.png" type="Texture" id=2]
[ext_resource path="res://screens/info_screen/dKey.png" type="Texture" id=3]
[ext_resource path="res://screens/info_screen/qKey.png" type="Texture" id=4]
[ext_resource path="res://screens/info_screen/infoTheme.tres" type="Theme" id=5]
[ext_resource path="res://screens/info_screen/wKey.png" type="Texture" id=6]
[ext_resource path="res://screens/info_screen/sKey.png" type="Texture" id=7]
[ext_resource path="res://screens/info_screen/eKey.png" type="Texture" id=8]
[ext_resource path="res://screens/info_screen/aKey.png" type="Texture" id=9]
[ext_resource path="res://screens/info_screen/lkey.png" type="Texture" id=10]
[ext_resource path="res://screens/info_screen/kKey.png" type="Texture" id=11]
[ext_resource path="res://screens/info_screen/uKey.png" type="Texture" id=12]
[ext_resource path="res://screens/info_screen/blackPixel.png" type="Texture" id=13]
[ext_resource path="res://screens/info_screen/iKey.png" type="Texture" id=14]
[ext_resource path="res://screens/info_screen/rightShiftKey.png" type="Texture" id=15]
[ext_resource path="res://screens/info_screen/jKey.png" type="Texture" id=16]
[ext_resource path="res://screens/info_screen/oKey.png" type="Texture" id=17]
[ext_resource path="res://screens/info_screen/InfoScreen.gd" type="Script" id=18]
[ext_resource path="res://screens/info_screen/returnKey.png" type="Texture" id=19]

[node name="InfoScreen" type="Node2D"]
script = ExtResource( 18 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1283.0
margin_bottom = 723.0
texture = ExtResource( 13 )
expand = true
stretch_mode = 2

[node name="DisclaimerText" type="RichTextLabel" parent="."]
margin_left = 87.0
margin_top = 46.0
margin_right = 1189.0
margin_bottom = 238.0
theme = ExtResource( 5 )
text = "We hope you have fun playing this game.
Please keep in mind that it is intended purely for entertainment purposes.
In real life, where possible, recycle your trash, separate it in the correct containers, don't wait until it spills over before you bring it out and always wear a seatbelt."

[node name="ContinueText" type="RichTextLabel" parent="."]
margin_left = 379.0
margin_top = 268.0
margin_right = 834.0
margin_bottom = 305.0
theme = ExtResource( 5 )
custom_colors/default_color = Color( 0.105882, 1, 0, 1 )
text = "Press any key to continue"

[node name="Player1Controls" type="GridContainer" parent="."]
margin_left = 50.0
margin_top = 325.0
margin_right = 540.0
margin_bottom = 704.0
columns = 4

[node name="P1ControlsLabel" type="RichTextLabel" parent="Player1Controls"]
margin_right = 278.0
margin_bottom = 31.0
size_flags_horizontal = 3
theme = ExtResource( 5 )
text = "Player 1:"
fit_content_height = true

[node name="Spacer" type="Control" parent="Player1Controls"]
margin_left = 282.0
margin_right = 322.0
margin_bottom = 31.0

[node name="Spacer2" type="Control" parent="Player1Controls"]
margin_left = 326.0
margin_right = 366.0
margin_bottom = 31.0

[node name="Spacer3" type="Control" parent="Player1Controls"]
margin_left = 370.0
margin_right = 490.0
margin_bottom = 31.0

[node name="BackToMenuLabel" type="RichTextLabel" parent="Player1Controls"]
margin_top = 35.0
margin_right = 278.0
margin_bottom = 75.0
size_flags_horizontal = 3
theme = ExtResource( 5 )
text = "Back to menu"
fit_content_height = true

[node name="EscKey" type="TextureRect" parent="Player1Controls"]
margin_left = 282.0
margin_top = 35.0
margin_right = 322.0
margin_bottom = 75.0
texture = ExtResource( 2 )

[node name="Spacer4" type="Control" parent="Player1Controls"]
margin_left = 326.0
margin_top = 35.0
margin_right = 366.0
margin_bottom = 75.0

[node name="BackToMenuSpacer2" type="TextureRect" parent="Player1Controls"]
margin_left = 370.0
margin_top = 35.0
margin_right = 490.0
margin_bottom = 75.0
texture = ExtResource( 13 )

[node name="SlowDownLabel" type="RichTextLabel" parent="Player1Controls"]
margin_top = 79.0
margin_right = 278.0
margin_bottom = 119.0
size_flags_horizontal = 3
theme = ExtResource( 5 )
text = "Slow down"
fit_content_height = true

[node name="Spacer6" type="Control" parent="Player1Controls"]
margin_left = 282.0
margin_top = 79.0
margin_right = 322.0
margin_bottom = 119.0

[node name="WKey" type="TextureRect" parent="Player1Controls"]
margin_left = 326.0
margin_top = 79.0
margin_right = 366.0
margin_bottom = 119.0
texture = ExtResource( 6 )

[node name="Spacer7" type="Control" parent="Player1Controls"]
margin_left = 370.0
margin_top = 79.0
margin_right = 490.0
margin_bottom = 119.0

[node name="RotateLabel" type="RichTextLabel" parent="Player1Controls"]
margin_top = 123.0
margin_right = 278.0
margin_bottom = 163.0
size_flags_horizontal = 3
theme = ExtResource( 5 )
text = "Rotate (L/R)"
fit_content_height = true

[node name="QKey" type="TextureRect" parent="Player1Controls"]
margin_left = 282.0
margin_top = 123.0
margin_right = 322.0
margin_bottom = 163.0
texture = ExtResource( 4 )

[node name="Spacer8" type="Control" parent="Player1Controls"]
margin_left = 326.0
margin_top = 123.0
margin_right = 366.0
margin_bottom = 163.0

[node name="EKey" type="TextureRect" parent="Player1Controls"]
margin_left = 370.0
margin_top = 123.0
margin_right = 490.0
margin_bottom = 163.0
texture = ExtResource( 8 )

[node name="MoveLabel" type="RichTextLabel" parent="Player1Controls"]
margin_top = 167.0
margin_right = 278.0
margin_bottom = 207.0
size_flags_horizontal = 3
theme = ExtResource( 5 )
text = "Move (L/R)"
fit_content_height = true

[node name="AKey" type="TextureRect" parent="Player1Controls"]
margin_left = 282.0
margin_top = 167.0
margin_right = 322.0
margin_bottom = 207.0
texture = ExtResource( 9 )

[node name="Spacer9" type="Control" parent="Player1Controls"]
margin_left = 326.0
margin_top = 167.0
margin_right = 366.0
margin_bottom = 207.0

[node name="DKey" type="TextureRect" parent="Player1Controls"]
margin_left = 370.0
margin_top = 167.0
margin_right = 490.0
margin_bottom = 207.0
texture = ExtResource( 3 )

[node name="SpeedUpLabel" type="RichTextLabel" parent="Player1Controls"]
margin_top = 211.0
margin_right = 278.0
margin_bottom = 251.0
size_flags_horizontal = 3
theme = ExtResource( 5 )
text = "Speed up"
fit_content_height = true

[node name="Spacer10" type="Control" parent="Player1Controls"]
margin_left = 282.0
margin_top = 211.0
margin_right = 322.0
margin_bottom = 251.0

[node name="SKey" type="TextureRect" parent="Player1Controls"]
margin_left = 326.0
margin_top = 211.0
margin_right = 366.0
margin_bottom = 251.0
texture = ExtResource( 7 )

[node name="Spacer11" type="Control" parent="Player1Controls"]
margin_left = 370.0
margin_top = 211.0
margin_right = 490.0
margin_bottom = 251.0

[node name="DropTrashLabel" type="RichTextLabel" parent="Player1Controls"]
margin_top = 255.0
margin_right = 278.0
margin_bottom = 295.0
size_flags_horizontal = 3
theme = ExtResource( 5 )
text = "Drop trash"
fit_content_height = true

[node name="Spacer12" type="Control" parent="Player1Controls"]
margin_left = 282.0
margin_top = 255.0
margin_right = 322.0
margin_bottom = 295.0

[node name="Spacer13" type="Control" parent="Player1Controls"]
margin_left = 326.0
margin_top = 255.0
margin_right = 366.0
margin_bottom = 295.0

[node name="SpaceBar" type="TextureRect" parent="Player1Controls"]
margin_left = 370.0
margin_top = 255.0
margin_right = 490.0
margin_bottom = 295.0
texture = ExtResource( 1 )

[node name="PauseGameLabel" type="RichTextLabel" parent="Player1Controls"]
margin_top = 299.0
margin_right = 278.0
margin_bottom = 379.0
size_flags_horizontal = 3
theme = ExtResource( 5 )
text = "Pause Game
"
fit_content_height = true

[node name="Spacer15" type="Control" parent="Player1Controls"]
margin_left = 282.0
margin_top = 299.0
margin_right = 322.0
margin_bottom = 379.0

[node name="Spacer14" type="Control" parent="Player1Controls"]
margin_left = 326.0
margin_top = 299.0
margin_right = 366.0
margin_bottom = 379.0

[node name="ReturnKey" type="TextureRect" parent="Player1Controls"]
margin_left = 370.0
margin_top = 299.0
margin_right = 490.0
margin_bottom = 379.0
texture = ExtResource( 19 )

[node name="Player2Controls" type="GridContainer" parent="."]
margin_left = 727.0
margin_top = 325.0
margin_right = 1233.0
margin_bottom = 695.0
columns = 4

[node name="P2ControlsLabel" type="RichTextLabel" parent="Player2Controls"]
margin_right = 334.0
margin_bottom = 31.0
size_flags_horizontal = 3
theme = ExtResource( 5 )
text = "Player 2:"
fit_content_height = true

[node name="Spacer" type="Control" parent="Player2Controls"]
margin_left = 338.0
margin_right = 378.0
margin_bottom = 31.0

[node name="Spacer2" type="Control" parent="Player2Controls"]
margin_left = 382.0
margin_right = 422.0
margin_bottom = 31.0

[node name="Spacer3" type="Control" parent="Player2Controls"]
margin_left = 426.0
margin_right = 506.0
margin_bottom = 31.0

[node name="BackToMenuLabel" type="RichTextLabel" parent="Player2Controls"]
margin_top = 35.0
margin_right = 334.0
margin_bottom = 66.0
size_flags_horizontal = 3
theme = ExtResource( 5 )
text = "   "
fit_content_height = true

[node name="Spacer4" type="Control" parent="Player2Controls"]
margin_left = 338.0
margin_top = 35.0
margin_right = 378.0
margin_bottom = 66.0

[node name="Spacer5" type="Control" parent="Player2Controls"]
margin_left = 382.0
margin_top = 35.0
margin_right = 422.0
margin_bottom = 66.0

[node name="Spacer6" type="Control" parent="Player2Controls"]
margin_left = 426.0
margin_top = 35.0
margin_right = 506.0
margin_bottom = 66.0

[node name="SlowDownLabel" type="RichTextLabel" parent="Player2Controls"]
margin_top = 70.0
margin_right = 334.0
margin_bottom = 110.0
size_flags_horizontal = 3
theme = ExtResource( 5 )
text = "Slow down"
fit_content_height = true

[node name="Spacer7" type="Control" parent="Player2Controls"]
margin_left = 338.0
margin_top = 70.0
margin_right = 378.0
margin_bottom = 110.0

[node name="IKey" type="TextureRect" parent="Player2Controls"]
margin_left = 382.0
margin_top = 70.0
margin_right = 422.0
margin_bottom = 110.0
texture = ExtResource( 14 )

[node name="Spacer8" type="Control" parent="Player2Controls"]
margin_left = 426.0
margin_top = 70.0
margin_right = 506.0
margin_bottom = 110.0

[node name="RotateLabel" type="RichTextLabel" parent="Player2Controls"]
margin_top = 114.0
margin_right = 334.0
margin_bottom = 154.0
size_flags_horizontal = 3
theme = ExtResource( 5 )
text = "Rotate (L/R)"
fit_content_height = true

[node name="UKey" type="TextureRect" parent="Player2Controls"]
margin_left = 338.0
margin_top = 114.0
margin_right = 378.0
margin_bottom = 154.0
texture = ExtResource( 12 )

[node name="Spacer9" type="Control" parent="Player2Controls"]
margin_left = 382.0
margin_top = 114.0
margin_right = 422.0
margin_bottom = 154.0

[node name="OKey" type="TextureRect" parent="Player2Controls"]
margin_left = 426.0
margin_top = 114.0
margin_right = 506.0
margin_bottom = 154.0
texture = ExtResource( 17 )

[node name="MoveLabel" type="RichTextLabel" parent="Player2Controls"]
margin_top = 158.0
margin_right = 334.0
margin_bottom = 198.0
size_flags_horizontal = 3
theme = ExtResource( 5 )
text = "Move (L/R)"
fit_content_height = true

[node name="JKey" type="TextureRect" parent="Player2Controls"]
margin_left = 338.0
margin_top = 158.0
margin_right = 378.0
margin_bottom = 198.0
texture = ExtResource( 16 )

[node name="Spacer10" type="Control" parent="Player2Controls"]
margin_left = 382.0
margin_top = 158.0
margin_right = 422.0
margin_bottom = 198.0

[node name="LKey" type="TextureRect" parent="Player2Controls"]
margin_left = 426.0
margin_top = 158.0
margin_right = 506.0
margin_bottom = 198.0
texture = ExtResource( 10 )

[node name="SpeedUpLabel" type="RichTextLabel" parent="Player2Controls"]
margin_top = 202.0
margin_right = 334.0
margin_bottom = 242.0
size_flags_horizontal = 3
theme = ExtResource( 5 )
text = "Speed up"
fit_content_height = true

[node name="Spacer11" type="Control" parent="Player2Controls"]
margin_left = 338.0
margin_top = 202.0
margin_right = 378.0
margin_bottom = 242.0

[node name="KKey" type="TextureRect" parent="Player2Controls"]
margin_left = 382.0
margin_top = 202.0
margin_right = 422.0
margin_bottom = 242.0
texture = ExtResource( 11 )

[node name="Spacer12" type="Control" parent="Player2Controls"]
margin_left = 426.0
margin_top = 202.0
margin_right = 506.0
margin_bottom = 242.0

[node name="DropTrashLabel" type="RichTextLabel" parent="Player2Controls"]
margin_top = 246.0
margin_right = 334.0
margin_bottom = 286.0
size_flags_horizontal = 3
theme = ExtResource( 5 )
text = "Drop trash"
fit_content_height = true

[node name="Spacer13" type="Control" parent="Player2Controls"]
margin_left = 338.0
margin_top = 246.0
margin_right = 378.0
margin_bottom = 286.0

[node name="Spacer14" type="Control" parent="Player2Controls"]
margin_left = 382.0
margin_top = 246.0
margin_right = 422.0
margin_bottom = 286.0

[node name="RShiftKey" type="TextureRect" parent="Player2Controls"]
margin_left = 426.0
margin_top = 246.0
margin_right = 506.0
margin_bottom = 286.0
texture = ExtResource( 15 )

[node name="PauseGameLabel" type="RichTextLabel" parent="Player2Controls"]
margin_top = 290.0
margin_right = 334.0
margin_bottom = 370.0
size_flags_horizontal = 3
theme = ExtResource( 5 )
text = "Pause Game
"
fit_content_height = true

[node name="Spacer15" type="Control" parent="Player2Controls"]
margin_left = 338.0
margin_top = 290.0
margin_right = 378.0
margin_bottom = 370.0

[node name="Spacer16" type="Control" parent="Player2Controls"]
margin_left = 382.0
margin_top = 290.0
margin_right = 422.0
margin_bottom = 370.0

[node name="ReturnKey" type="TextureRect" parent="Player2Controls"]
margin_left = 426.0
margin_top = 290.0
margin_right = 506.0
margin_bottom = 370.0
texture = ExtResource( 19 )
